unpackaged/main/default/objects/pse__Team_Settings__c/pse__Team_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines the default permission level for roles accessing the Manage Team and Team Schedule Management pages.</description>
    <label>Team Settings</label>
</CustomObject>