unpackaged/main/default/objects/pse__Team_Settings__c/fields/pse__Enable_Send_Notifications__c.field-meta.xml
<CustomField>
    <fullName>pse__Enable_Send_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, the Team Schedule Notifications feature is enabled on the Team Schedule Planner page.</description>
    <inlineHelpText>If selected, the Team Schedule Notifications feature is enabled on the Team Schedule Planner page.</inlineHelpText>
    <label>Enable Send Notifications</label>
    <type>Checkbox</type>
</CustomField>