unpackaged/main/default/objects/pse__Team_Settings__c/fields/pse__Fill_Schedule_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>pse__Fill_Schedule_Tooltip__c</fullName>
    <description>The API name of a field set used to display a custom tooltip for the Fill Schedule tab in the Team Schedule Planner.</description>
    <inlineHelpText>The API name of a field set used to display a custom tooltip for the Fill Schedule tab in the Team Schedule Planner.</inlineHelpText>
    <label>Fill Schedule Tooltip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>