unpackaged/main/default/objects/pse__Team_Settings__c/fields/pse__Schedule_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule_Email_Template_Name__c</fullName>
    <description>Specifies the Template Unique Name of the email template to use for team schedule notifications.
		If no template is defined, a system-generated email template for notifications is used that includes the team schedule time slot names, start times, and end times. Note that you can override the template at a team level with the Custom Template Name (Schedule) field on the Team object.</description>
    <inlineHelpText>Specifies the Template Unique Name of the email template to use for team schedule notifications.</inlineHelpText>
    <label>Email Template (Schedule)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>