unpackaged/main/default/objects/pse__Team_Settings__c/fields/pse__Swap_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Swap_Email_Template_Name__c</fullName>
    <description>Specifies the Template Unique Name of the email template to use for team shift swap notifications. If no template is defined, a system-generated email template for notifications is used that includes the team name, shift day and date,  previously assigned team member, new team member, start and end times, work hours, team time zone, user initiating the swap, and date and time of the swap.  Note that you can override the template at a team level with the Custom Template Name (Swap) field on the Team object.</description>
    <inlineHelpText>Specifies the Template Unique Name of the email template to use for team shift swap notifications.</inlineHelpText>
    <label>Email Template (Swap)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>