unpackaged/main/default/objects/pse__Team_Settings__c/fields/pse__Team_Member_Permission_Level__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Member_Permission_Level__c</fullName>
    <defaultValue>'1'</defaultValue>
    <description>Defines the default Team Member permission level for roles accessing the Manage Team and Team Schedule Management pages. Valid values are integers where 0 is None (no access), 1 is Read, and 2 is Edit. If not defined, the default is 1 (Read).</description>
    <inlineHelpText>Defines the default Team Member permission level for roles accessing the Manage Team and Team Schedule Management pages. Valid values are integers where 0 is None (no access), 1 is Read, and 2 is Edit. If not defined, the default is 1 (Read).</inlineHelpText>
    <label>Team Member Permission Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>